--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<div id="app">
-  <div>
-    Você deve remover a sintaxe de atribuição do ES5. ✅ <br />
-    Você deve usar desestruturação para criar a variável lowToday. ✅<br />
-    Aguardando:Você deve usar desestruturação para criar a variável highToday.✅
-    <br />
-    lowToday deve ser igual a 64 e highToday deve ser igual a 77.✅
-    <br />
-  </div>
-</div>
+<div id="app"></div>
