3 files modified TEST #2 FINAL

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<div id="app"></div>
+<div id="app">
+  <div class="container">
+    O valor de a deve ser 6, após a troca.✅ <br />
+    O valor de b deve ser 8, após a troca.✅ <br />
+    Você deve usar desestruturação de array para trocar a e b.✅
+  </div>
+</div>
