--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <div id="app">
   <div class="container">
-     <br />
-     <br />
-     <br>
-   
+    arr deve ser [3,4,5,6,7,8,9,10]✅ <br />
+    source deve ser [1,2,3,4,5,6,7,8,9,10]✅ <br />
+    Array.slice() não deve ser usado.✅ <br />
+    Desestruturação na list deve ser usada.✅
   </div>
 </div>
