--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <div id="app">
   <div class="container">
+    <div class="card-header">
+    </div>  <div class="section"></div>
+    <section></section>
+    <section></section>
 
   </div>
 </div>
