--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <div id="app">
   <div class="container">
-    <div class="card-header">
-    </div>  <div class="section"></div>
-    <section></section>
-    <section></section>
+    <p> stats deve ser um object. ✅</p>
+    <p>half(stats) deve ser 28.015✅</p>
+    <p>Desestruturação deve ser usado. ✅</p>
+    <p>O parâmetro desestruturado deve ser usado. ✅</p>
+
 
   </div>
 </div>
